# rcm-ai-platform

./: .dockerignore  .env.example  .gitignore  AETHERA_FLEET.md  Aethera_AI_SOP.docx  CLAUDE_CODE_INSTRUCTIONS.md  CLAUDE_CODE_PROMPTS.md  CONTAINER_RUNTIME.md  DEPLOY.md  DEPLOY_LOCAL.md  DEPLOY_NOW.md  DEPLOY_PROMPT.md  Dockerfile  README.md  SAFE_FAIL.md  SETUP_AND_DEPLOY.md  alembic.ini  apply_patch_migration.bat  build-frontend.bat  build_provider_portal.bat  build_staff_portal.bat  check_containers.bat  check_migration.bat  check_migration_state.bat  container_status.txt  deploy-apple-redesign.bat  deploy-crm.bat  deploy-favicon-fixes.bat  deploy-logo-update.bat  deploy-rcm-portals.bat  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  fix_celery_worker.bat  medclaim_ai_audit_report.docx  migration_diag.txt  migration_result.txt  migration_status.txt  move-crm-gdrive-to-local.bat  patch_migration_result.txt  (+14 more)
.claude/: settings.local.json
.github/workflows/: deploy.yml  test.yml
config/nginx/: Dockerfile  nginx.conf
config/prometheus/: prometheus.yml
data/migrations/: env.py  rls_policies.sql
data/migrations/versions/: a2f84c901e12_add_must_change_password.py  b1130d605f93_initial_schema.py  c3d91e7f2a45_add_harmony_ehr_modules.py  e5f82b193d67_add_error_logs_table.py  f7a93c814e12_add_notes_to_work_queue_items.py  g8b04d925f33_add_patch_columns_to_error_logs.py
docs/: ARCHITECTURE.md  DATA_MODEL.md  DATA_MODEL_MULTITENANT.md  ENHANCEMENTS.md
logs/: fix-output.txt  full-status.txt  nginx-check.txt  nginx-debug.txt  nginx-diagnose.txt  nginx-fix-result.txt  nginx-start-result.txt  post-nginx-fix.txt  status-check.txt
scripts/: check-cloudflared.bat  check-nginx.bat  check-status-full.bat  create_admin.py  create_provider_login.py  debug_denials.py  deploy-local.ps1  deploy-update.ps1  deploy.sh  diag_practices.py  diagnose-nginx.bat  ensure-running.ps1  fix-now.bat  fix-now.ps1  generate_secrets.py  link_user_to_practice.py  mint_test_tokens.py  nginx-debug.bat  rebuild-nginx.bat  redeploy-frontend.bat  register-startup-task.ps1  relink_queue_items.py  reset_pw.py  run-nginx-fix.bat  seed_extra_lobs.py  seed_mock_data.py  seed_one_claim.py  setup_tunnel.py  simulate_claim_denial.py  simulate_rcm.py  smoke_test.py  start-nginx-fixed.bat  start.ps1  stop.ps1  test_e2e_patcher.py  test_endpoints.py  verify_claim_forms.py  verify_directives.py  verify_enhancements.py
src/: config.py
src/api/: main.py
src/api/middleware/: tenant.py
src/api/routes/: __init__.py  admin.py  ai_assistant.py  analytics.py  auth.py  charge_intake.py  claim_forms.py  claims.py  client_billing.py  client_management.py  coding.py  denials.py  documents.py  ehr_integration.py  eligibility.py  error_intelligence.py  knowledge.py  notifications.py  patient_billing.py  patients.py  payers.py  payments.py  prior_auth.py  provider_analytics.py  provider_portal.py  provider_users.py  tasks.py  users.py  work_queue.py
src/api/schemas/: __init__.py  auth.py  claims.py  common.py  denials.py  payments.py
src/core/: rbac.py
src/core/ai_dispatch/: __init__.py  client.py  directives.py  dispatcher.py  tasks.py
src/core/ar_intake/: __init__.py  service.py  tasks.py  triage.py
src/core/billing/: __init__.py  errors.py  service.py  tasks.py
src/core/charge_intake/: errors.py  service.py
src/core/claim_forms/: __init__.py  assembler.py  forms.py  nppes.py
src/core/client_billing/: __init__.py  errors.py  service.py  tasks.py
src/core/client_management/: errors.py  service.py
src/core/coding/: __init__.py  errors.py  service.py  tasks.py
src/core/denials/: __init__.py  errors.py  service.py  tasks.py
src/core/document_intake/: __init__.py  service.py  tasks.py
src/core/documents/: service.py
src/core/ehr_integration/: service.py  tasks.py
src/core/eligibility/: clearinghouse.py  plan_rules.py  plan_types.py  service.py  x12_270.py  x12_271.py
tests/load/: spike_test.py
tests/unit/: test_ai_dispatch.py  test_analytics.py  test_ar_intake.py  test_auth.py  test_billing.py  test_charge_intake.py  test_clearinghouse.py  test_client_billing.py  test_client_management.py  test_coding.py  test_denials.py  test_document_intake.py  test_full_platform.py  test_knowledge.py  test_payments.py  test_plan_rules.py  test_plan_types.py  test_provider_portal.py  test_queues.py  test_rbac.py  test_scrubber.py  test_tasks.py  test_x12_271.py
ui/provider-portal/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1779116804081-9979f024eae05.mjs  vite.config.ts.timestamp-1779171072243-897051a0f2d08.mjs
ui/staff-portal/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1779130948008-d3b687ad60295.mjs  vite.config.ts.timestamp-1779878737940-fff2083166fa6.mjs  vite.config.ts.timestamp-1779880215124-9295f602075b3.mjs  vite.config.ts.timestamp-1781523548936-0fcce081162ad.mjs
(+103 files in other folders)
