[project]
name = "aethera-ai"
version = "1.0.0"
description = "Aethera AI — AI-powered Revenue Cycle Management platform for medical billing, coding, payment posting, and denial management"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    # === Web Framework ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",

    # === Document extraction (knowledge-base uploads) ===
    "pypdf>=6.0",
    "python-docx>=1.1",

    # === Database ===
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",

    # === Redis / Celery ===
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",

    # === AI / LLM ===
    "anthropic>=0.40.0",
    "ollama>=0.4.0",
    "qdrant-client>=1.12.0",
    "voyageai>=0.3.0",
    "tiktoken>=0.8.0",

    # === NLP / ML ===
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.8.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",

    # === EDI / Healthcare ===
    "hl7>=0.4.5",
    "fhir.resources>=7.1.0",

    # === Storage ===
    "boto3>=1.35.0",

    # === Auth / Security ===
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyotp>=2.9.0",
    "cryptography>=43.0.0",
    "email-validator>=2.1.0",

    # === Rate Limiting ===
    "slowapi>=0.1.9",

    # === EHR Integration ===
    "twilio>=9.0.0",
    "paramiko>=3.5.0",

    # === Monitoring / Metrics ===
    "prometheus-client>=0.21.0",
    "sentry-sdk[fastapi]>=2.0.0",

    # === Production Server ===
    "gunicorn>=23.0.0",

    # === JWT decode (session timeout) ===
    "PyJWT>=2.10.0",

    # === Utilities ===
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["E501", "S101", "S603", "S607", "S608", "B008", "A003"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "N"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
# Bare "pytest" (no cwd on sys.path) was collecting integration scripts that import src.
# Scope collection to tests/ and add repo root to the path so "from src..." resolves
# under both "pytest" and "python -m pytest".
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--tb=short -q"
